--- a/ubuntu-apache-php7.1/Dockerfile
+++ b/ubuntu-apache-php7.1/Dockerfile
@@ -21,7 +21,7 @@ RUN	\
     && rm ${APACHE_CONF_DIR}/sites-enabled/000-default.conf ${APACHE_CONF_DIR}/sites-available/000-default.conf \
     && a2enmod rewrite headers php7.1 \
     # PHP settings
-	&& phpenmod mcrypt \
+	&& phpenmod proxy_http mcrypt \
 	# Install composer
 	&& curl -sS https://getcomposer.org/installer | php -- --version=1.4.1 --install-dir=/usr/local/bin --filename=composer \
 	# Cleaning
