--- a/ubuntu-apache-php7.1/Dockerfile
+++ b/ubuntu-apache-php7.1/Dockerfile
@@ -19,9 +19,9 @@ RUN	\
     # Apache settings
     && cp /dev/null ${APACHE_CONF_DIR}/conf-available/other-vhosts-access-log.conf \
     && rm ${APACHE_CONF_DIR}/sites-enabled/000-default.conf ${APACHE_CONF_DIR}/sites-available/000-default.conf \
-    && a2enmod rewrite headers php7.1 \
+    && a2enmod proxy_http rewrite headers php7.1 \
     # PHP settings
-	&& phpenmod proxy_http mcrypt \
+	&& phpenmod mcrypt \
 	# Install composer
 	&& curl -sS https://getcomposer.org/installer | php -- --version=1.4.1 --install-dir=/usr/local/bin --filename=composer \
 	# Cleaning
